--- a/html/index.html
+++ b/html/index.html
@@ -64,7 +64,7 @@
       <div class="container">
         <div class="content-center brand">
           <h1 class="h1-seo">SOCIAL•media</h1>
-          <h3>Feito por: Ednailson Junior, 149131051 & Carolina Silva.</h3>
+          <h3>Feito por: Ednailson Junior, 149131051 & Carolina Silva, 164141119.</h3>
         </div>
       </div>
     </div>
