--- a/html/user/timeline.html
+++ b/html/user/timeline.html
@@ -166,7 +166,7 @@
                     <div class="card card-register">
                         <div class="card-header">
                             <img class="card-img" src="../assets/img/square1.png" alt="Card image">
-                            <h4 class="card-title ml-2">post</h4>
+                            <h4 class="card-title ml-2">Post</h4>
                         </div>
                         <div class="card-body">
                             <form class="form">
@@ -178,7 +178,7 @@
                                 </div>
 
                                 <label for="postText"><i class="tim-icons icon-notes text-lg-center"></i></label>
-                                <textarea id="postText" class="form-control" placeholder="Escreva seu post aqui"
+                                <textarea id="postText" class="form-control" placeholder="No que você está pensando?"
                                           maxlength="200"></textarea>
                             </form>
                         </div>
