--- a/html/index.html
+++ b/html/index.html
@@ -77,7 +77,7 @@
                 <i class="tim-icons icon-simple-remove text-white"></i>
               </button>
               <div class="text-muted text-center ml-auto mr-auto">
-                <h3 class="mb-0">Logue-se</h3>
+                <h3 class="mb-0">Entrar</h3>
               </div>
             </div>
             <div class="modal-body">
