--- a/html/index.html
+++ b/html/index.html
@@ -236,10 +236,10 @@
                 function(data){
                   let obj = JSON.parse(data);
                   if(obj.status == 200) {
-                    alert("Cadastro realizado com sucesso");
+                    alert("Cadastro realizado com sucesso! Aproveite.");
                     window.location.reload();
                   } else {
-                    alert("Usuário ou e-mail já existentes")
+                    alert("Usuário ou e-mail já existentes.")
                   }
                 });
       });
