--- a/html/user/timeline.html
+++ b/html/user/timeline.html
@@ -23,6 +23,7 @@
             function (data) {
                 let obj = JSON.parse(data);
                 if (obj.status == 200 && obj.data != null) {
+                    localStorage.setItem("user_name", obj.data.name);
                     document.getElementById("userName").innerHTML = obj.data.name;
                     document.getElementById("userEmail").innerHTML = obj.data.email;
                     function createCard3(cardData) {
@@ -77,7 +78,7 @@
                             (cardData.comments != null) ? function(cardData2) {
                                     let comms = '';
                                     cardData2.comments.forEach(function (element, index, array) {
-                                        comms += ('<p class="text-sm-center text-success">Comentario: '+ (index+1) + ': <b>' + element +'</b></p>')
+                                        comms += ('<p class="text-sm-center text-success"><b>' + element +'</b></p>')
                                     });
                                     return comms;
                                 }(cardData) : '',
@@ -95,7 +96,7 @@
                         $('#wholePosts').append(cards);
                     });
                 } else {
-                    // alert("Algo deu errado, reinicie a página!")
+                    alert("Algo deu errado, reinicie a página!")
                 }
             });
     </script>
@@ -134,6 +135,11 @@
                 </div>
             </div>
             <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a href="friendship.html" class="nav-link">
+                        <i class="tim-icons icon-heart-2"></i> Solicitações pendentes
+                    </a>
+                </li>
                 <li class="dropdown nav-item">
                     <a href="#" class="dropdown-toggle nav-link" data-toggle="dropdown">
                         <i class="tim-icons icon-single-02"></i>
@@ -219,15 +225,15 @@
                                 <i class="tim-icons icon-zoom-split"></i>
                             </button>
                             <div class="tab-pane active" id="linka">
-                                <div class="table-responsive">
+                                <div class="">
                                     <table class="table tablesorter " id="plain-table">
                                         <thead class=" text-primary">
                                         <tr>
                                             <th class="header">
-                                                FOTO
+<!--                                                FOTO-->
                                             </th>
                                             <th class="header">
-                                                USUARIO
+<!--                                                USUARIO-->
                                             </th>
                                         </tr>
                                         </thead>
@@ -378,7 +384,7 @@
     function publishComment (i) {
         $.post("../api/add_comment.php",
             {
-                comment: document.getElementById("comment-post-" + i).value,
+                comment: localStorage.getItem("user_name") + ': ' + document.getElementById("comment-post-" + i).value,
                 post_id: i,
             },
             function (data) {
