--- a/html/index.html
+++ b/html/index.html
@@ -7,7 +7,7 @@
   <link rel="apple-touch-icon" sizes="76x76" href="./assets/img/apple-icon.png">
   <link rel="icon" type="image/png" href="./assets/img/favicon.png">
   <title>
-    Social Media
+    Heroes Book
   </title>
   <link href="https://fonts.googleapis.com/css?family=Poppins:200,300,400,600,700,800" rel="stylesheet" />
   <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
@@ -21,7 +21,7 @@
     <div class="container">
       <div class="navbar-translate">
         <a class="navbar-brand" href="index.html" rel="tooltip" data-placement="bottom">
-          <span>SOCIAL•</span>MEDIA
+          <span>HEROES•</span>BOOK
         </a>
         <button class="navbar-toggler navbar-toggler" type="button" data-toggle="collapse" data-target="#navigation" aria-controls="navigation-index" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-bar bar1"></span>
@@ -34,7 +34,7 @@
           <div class="row">
             <div class="col-6 collapse-brand">
               <a>
-                SOCIAL•MEDIA
+                HEROES•BOOK
               </a>
             </div>
           </div>
@@ -63,7 +63,7 @@
       <div class="squares square7"></div>
       <div class="container">
         <div class="content-center brand">
-          <h1 class="h1-seo">SOCIAL•media</h1>
+          <h1 class="h1-seo">HEROES•book</h1>
           <h3>Feito por: Ednailson Junior, 149131051 & Carolina Silva, 164141119.</h3>
         </div>
       </div>
