--- a/html/user/profile.html
+++ b/html/user/profile.html
@@ -7,7 +7,7 @@
   <link rel="apple-touch-icon" sizes="76x76" href="../assets/img/apple-icon.png">
   <link rel="icon" type="image/png" href="../assets/img/favicon.png">
   <title>
-    SocialMedia
+    HeroesBook
   </title>
   <link href="https://fonts.googleapis.com/css?family=Poppins:200,300,400,600,700,800" rel="stylesheet"/>
   <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
@@ -132,7 +132,7 @@
   <div class="container">
     <div class="navbar-translate">
       <a class="navbar-brand" href="timeline.html" rel="tooltip" data-placement="bottom">
-        <span>SOCIAL•</span>MEDIA
+        <span>HEROES•</span>BOOK
       </a>
       <button class="navbar-toggler navbar-toggler" type="button" data-toggle="collapse" data-target="#navigation"
               aria-controls="navigation-index" aria-expanded="false" aria-label="Toggle navigation">
@@ -146,7 +146,7 @@
         <div class="row">
           <div class="col-6 collapse-brand">
             <a>
-              SOCIAL•MEDIA
+              HEROES•BOOK
             </a>
           </div>
           <div class="col-6 collapse-close text-right">
@@ -232,7 +232,7 @@
   <div class="container">
     <div class="row">
       <div class="col-md-3">
-        <h1 class="title">SOCIAL•MEDIA</h1>
+        <h1 class="title">HEROES•BOOK</h1>
       </div>
     </div>
   </div>
