--- a/desenvolvimento-web/banda/banda.html
+++ b/desenvolvimento-web/banda/banda.html
@@ -103,7 +103,7 @@
             <p>
                 Feito por Ednailson Vilas Boas
                 <br>
-                <strong>Matricula</strong>: 149131051
+                <strong>Matricula</strong>: 149131051.
             </p>
         </center>
     </div>
